
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef scalar_t__ u_int32_t ;
typedef int u_char ;
typedef int arpbuff ;
struct TYPE_3__ {scalar_t__ ipaddr; int * l2addr; } ;


 int ARPOP_REQUEST ;
 int ETHARP_PKT_SIZE ;
 int ETHERTYPE_ARP ;
 int ETHHDR_SIZE ;
 int build_arp_hdr (int *,scalar_t__,int *,scalar_t__,int ,int *) ;
 int build_ether_hdr (int *,int *,int ,int *) ;
 TYPE_1__ out_intf ;
 int write_link (TYPE_1__*,int *,int) ;

int arp_request(u_int32_t ripaddr,u_int32_t ipsrc,u_char *macsrc){
  u_char arpbuff[ETHARP_PKT_SIZE];

 if(macsrc==((void*)0))macsrc=out_intf.l2addr;
 if(ipsrc==0)ipsrc=out_intf.ipaddr;
 build_ether_hdr((u_char*)"\xff\xff\xff\xff\xff\xff",macsrc,ETHERTYPE_ARP,arpbuff);

 build_arp_hdr((u_char*)"\x0\x0\x0\x0\x0\x0",
     ripaddr,
     macsrc,
     ipsrc,
     ARPOP_REQUEST,
     arpbuff + ETHHDR_SIZE
     );

 write_link(&out_intf,arpbuff,sizeof(arpbuff));

 return 1;
}
