; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_2915.c_arp_request.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_2915.c_arp_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32* }

@ETHARP_PKT_SIZE = common dso_local global i32 0, align 4
@out_intf = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@.str = private unnamed_addr constant [7 x i8] c"\FF\FF\FF\FF\FF\FF\00", align 1
@ETHERTYPE_ARP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] zeroinitializer, align 1
@ARPOP_REQUEST = common dso_local global i32 0, align 4
@ETHHDR_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @arp_request(i64 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* @ETHARP_PKT_SIZE, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %7, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %8, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32*, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @out_intf, i32 0, i32 1), align 8
  store i32* %16, i32** %6, align 8
  br label %17

17:                                               ; preds = %15, %3
  %18 = load i64, i64* %5, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @out_intf, i32 0, i32 0), align 8
  store i64 %21, i64* %5, align 8
  br label %22

22:                                               ; preds = %20, %17
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* @ETHERTYPE_ARP, align 4
  %25 = call i32 @build_ether_hdr(i32* bitcast ([7 x i8]* @.str to i32*), i32* %23, i32 %24, i32* %12)
  %26 = load i64, i64* %4, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i64, i64* %5, align 8
  %29 = load i32, i32* @ARPOP_REQUEST, align 4
  %30 = load i32, i32* @ETHHDR_SIZE, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %12, i64 %31
  %33 = call i32 @build_arp_hdr(i32* bitcast ([7 x i8]* @.str.1 to i32*), i64 %26, i32* %27, i64 %28, i32 %29, i32* %32)
  %34 = mul nuw i64 4, %10
  %35 = trunc i64 %34 to i32
  %36 = call i32 @write_link(%struct.TYPE_3__* @out_intf, i32* %12, i32 %35)
  %37 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %37)
  ret i32 1
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @build_ether_hdr(i32*, i32*, i32, i32*) #2

declare dso_local i32 @build_arp_hdr(i32*, i64, i32*, i64, i32, i32*) #2

declare dso_local i32 @write_link(%struct.TYPE_3__*, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
